# ASTSentinel

./: .claude_project_cache.json  .encryption.key  .env  .env.example  .gitattributes  .gitignore  .hooks-config.example.json  .rustfmt.toml  AGENTS.md  API_docs.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUIDE.md  IMPLEMENTATION_STATUS.md  Makefile  PLAN.md  README.md  README_HOOKS.md  TEST_README.md  ast_validation_test.py  bad.py  demo.py  extract_head.py  final_test_legitimate.js  get_diff.ps1  hook-input-debug.json  input1.json  input2.json  minimal_hook.bat.disabled  perfect_clean_code.py  perfect_code_with_tests.py  production_test_deceptive.js  production_test_legitimate.js  read_chunk.ps1  rust_test_validation.rs  setup_python_path.ps1  simple_diff.bat  temp_git_diff.bat  temp_head.ps1  (+25 more)
.claude/: settings.local.json
.github/workflows/: audit.yml  ci.yml  coverage.yml  perf-gate.yml  release.yml
archive/: README.md  test_bad_formatting.rs  test_format_input.json  test_formatting_demo.rs  test_input.json  test_js_error.rs  test_param.json
benches/: ast_perf.rs  performance.rs
debug_files/: debug_hook.bat  direct_output.json  hook-input-debug.json  minimal_hook.py  pretooluse_output.txt  quick_hook.bat  rust_stderr.txt  simple_stderr.txt  simple_userpromptsubmit.py  stderr_fixed.txt  stderr_only.txt
docs/: ARCHITECTURE.md  Claude-Code-Hooks-Guide.md  GPT-5-Guide.md  PLAYBOOK_AST_FLAGS.md  PRODUCTION_HARDENING.md  PROJECT_STRUCTURE.md  TESTING.md  XAI-Grok-Code-Fast-1.md
docs/archive/: README.md
edge_cases/: config.js  legitimate_random.js  middleware.js  validation_clean.js
examples/: output_template_markdown.txt  output_template_xml.txt  output_template_yaml.txt
prompts/: anti_patterns.txt  edit_validation.txt  json_template.txt  language.txt  language_instruction.txt  memory_optimization.txt  output_template.txt  post_edit_validation.txt
reports/: quality_improvements_report.md
scripts/: bench_posttooluse.py  fix_clippy_format_simple.ps1  fix_format_args.py  fix_pretooluse.ps1  install_prompts.ps1  net_check.ps1  perf_baseline_summary.py  perf_gate.py  perf_gate_save.py  replace_pretooluse_block.py  run_tests_windows.ps1
scripts/windows/: make_hooks_config.ps1  pre-commit.ps1
src/: calculator.js  database_service.js  deception_detector.rs  deceptive_handler.rs  duplicate_detector.rs  fake_banking_service.js  fake_service.js  fake_service.rs  legitimate_service.js  legitimate_todos.js  lib.rs  mock_api.js  mock_api_client.rs  project_context.rs  service.js  smart_deception_detector.rs  telemetry.rs.autobak2  user_service.js  user_test.js  validation_constants.rs  validation_constants.rs.autobak
src-tauri/src/: text_engine.rs
src/analysis/: dependencies.rs  duplicate_detector.rs  duplicate_detector.rs.bak2  file_classifier.rs  metrics.rs  metrics.rs.safebak  mod.rs  project.rs  project.rs.bak3  semantic_analyzer.rs  timings.rs  timings.rs.finalbak
src/cache/: mod.rs  project.rs
src/config/: mod.rs  mod.rs.safebak
src/formatting/: error.rs.autobak  mod.rs  mod.rs.prefixbak
src/ignore/: mod.rs
src/messages/: glossary.rs  glossary.rs.safebak  mod.rs  mod.rs.safebak
src/metrics/: mod.rs  mod.rs.bak  (+1 more)
test_data/: README.md  hook_test.js  sample_c.c  sample_cs.cs  sample_go.go  sample_java.java  sample_php.php  sample_ruby.rb  test_real_conversation.jsonl  test_transcript_complete.jsonl  test_transcript_correct.jsonl  test_transcript_unique.jsonl
tests/: .claude_project_cache.json  README.md  ast_limits.rs  correct_location.test.js  demo_full_context.md  e2e_posttooluse.rs  e2e_posttooluse_api_contract.rs  e2e_posttooluse_entity_snippets.rs  e2e_posttooluse_golden.rs  e2e_posttooluse_golden_ast_only.rs  e2e_posttooluse_golden_ast_only_edit.rs  e2e_posttooluse_golden_dry_run.rs  e2e_posttooluse_quick_tips.rs  e2e_posttooluse_soft_budget.rs  e2e_posttooluse_timings.rs  e2e_pretooluse.rs  e2e_pretooluse_allowlist.rs  e2e_pretooluse_contract.rs  e2e_pretooluse_fakes.rs  e2e_pretooluse_fakes_more.rs  e2e_pretooluse_integrity.rs  e2e_userpromptsubmit.rs  e2e_userpromptsubmit_deps.rs  e2e_userpromptsubmit_more.rs  e2e_userpromptsubmit_pyproject.rs  edge_case_minimal.js  fake_implementation.js  legitimate_code_test.js  legitimate_mock.js  legitimate_with_todo.js  python_valid.py  real_test.js  relaxed_hooks_test.js  simple_test.rs  test_absolute_path.json  test_ai_transcript.txt  test_c_cpp_php_ruby.rs  test_compact_format.rs  test_config.rs  test_config_parsers.rs  (+37 more)
tmp_validation/: hook.json  post_out.json  post_out_new.json  sample.py  userprompt_hook.json  userprompt_out.txt
validation_tests/: deceptive_todos.js  documentation.md  edge_cases.js  legitimate_todos.js
(+120 files in other folders)
