[package]
name = "rust-validation-hooks"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Validation System"]
description = "High-performance validation hooks for Claude Code using Rust"

[[bin]]
name = "pretooluse"
path = "src/bin/pretooluse.rs"

[[bin]]
name = "posttooluse"
path = "src/bin/posttooluse.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"  # Changed from "abort" to see real errors
strip = false     # Changed to keep debug symbols
opt-level = 2     # Reduced optimization for stability
