[package]
name = "rust-validation-hooks"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Validation System"]
description = "High-performance validation hooks for Claude Code using Rust"

[[bin]]
name = "pretooluse"
path = "src/bin/pretooluse.rs"

[[bin]]
name = "posttooluse"
path = "src/bin/posttooluse.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
chrono = "0.4"
regex = "1.10"
lazy_static = "1.4"
rayon = "1.8"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
memmap2 = "0.9"
dashmap = "6.0"

# AST parsers for multiple languages
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-c-sharp = "0.21"
tree-sitter-go = "0.21"
tree-sitter-php = "0.22"
tree-sitter-ruby = "0.21"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"  # Changed from "abort" to see real errors
strip = false     # Changed to keep debug symbols
opt-level = 2     # Reduced optimization for stability
