[package]
name = "rust-validation-hooks"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Validation System"]
description = "High-performance validation hooks for Claude Code using Rust"
repository = "https://github.com/iMAGRAY/ValidationCodeHook"
readme = "README.md"
keywords = ["ast", "security", "hooks", "code", "claude"]
categories = ["development-tools", "code-analysis", "security"]

[[bin]]
name = "pretooluse"
path = "src/bin/pretooluse.rs"

[[bin]]
name = "posttooluse"
path = "src/bin/posttooluse.rs"

# Memory organizer binary removed as requested


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
chrono = "0.4"
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"
rayon = "1.8"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
dashmap = "6.0"
# tiktoken-rs removed - using simple token estimation instead
url = "2.5"
rand = "0.8"
libc = "0.2"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# AST parsers for multiple languages
# Align to the newer LanguageFn-based API across grammar crates
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-c-sharp = "0.21"
tree-sitter-go = "0.21"
tree-sitter-php = "0.22"
tree-sitter-ruby = "0.21"
tree-sitter-gleam = { git = "https://github.com/gleam-lang/tree-sitter-gleam", optional = true }

[features]
default = ["ast_fastpath"]

gleam-support = ["tree-sitter-gleam"]
ast_fastpath = []
cache_hash_guard = []

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "ast_perf"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
